--- a/CloudAgent/test-output/old/Default suite/classes.html
+++ b/CloudAgent/test-output/old/Default suite/classes.html
@@ -4,73 +4,85 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.CA.qa.TestCases.AgentToolBarHomePageTest</td>
+<td>com.CA.qa.TestCases.ValidateConfigurationsPage</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>VerifyAgentStatusToReady</td>
+<td>ValidateAgentPasswordEmptyErrorMsg</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>VerifyAgentModeAfterPreview</td>
+<td>ValidateAgentIdSplRAngeErrorMsg</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>VerifyAgentModeAfterBlended</td>
+<td>ValidateAgentNameRangeErrorMsg</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>VerifyAgentStatusToPause</td>
+<td>ValidateAgentPriorityEmptyErrorMsg</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>VerifyAgentModeAfterProgressive</td>
+<td>ValidateAgentDataErrorMsg</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyAgentStatusTestAtStart</td>
+<td>ValidateAgentNameSplRangeErrorMsg</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>VerifyAgentModeAtStart</td>
+<td>ValidateAgentIdErrorMsg</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>VerifyAgentModeAfterInbound</td>
+<td>ValidateAgentPasswordRAngeErrorMsg</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>VerifyAgentModeAfterManual</td>
+<td>ValidateAgentDataSplRangeErrorMsg</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>VerifyAgentATBForceRelease</td>
+<td>ValidateAgentPriorityRangeErrorMsg</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyATBHomePage_TitleTest</td>
+<td>ValidateAgentNameEmptyErrorMsg</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>ValidateAgentIdRAngeErrorMsg</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>ValidateAgentEmailErrorMsg</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>ValidateAgentModeNotEnabledErrorMsg</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>setup</td>
 <td>&nbsp;</td></tr>
 <tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>teardown</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>nteardown</td>
+<td>&nbsp;</td></tr>
 </table>
