--- a/CloudAgent/test-output/old/Default suite/methods.html
+++ b/CloudAgent/test-output/old/Default suite/methods.html
@@ -1,40 +1,36 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9eae87">  <td>20/02/14 16:08:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AgentToolBarHomePageTest.setup(java.lang.reflect.Method)[pri:0, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@498d318c]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@29183965</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>20/02/14 16:08:38</td>   <td>5345</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AgentToolBarHomePageTest.verifyATBHomePage_TitleTest()[pri:1, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@498d318c]">verifyATBHomePage_TitleTest</td> 
-  <td>main@29183965</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>20/02/14 16:08:38</td>   <td>5359</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AgentToolBarHomePageTest.teardown()[pri:0, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@498d318c]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@29183965</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>20/02/14 16:08:41</td>   <td>8392</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AgentToolBarHomePageTest.setup(java.lang.reflect.Method)[pri:0, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@498d318c]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@29183965</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>20/02/14 16:08:45</td>   <td>12758</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AgentToolBarHomePageTest.verifyAgentStatusTestAtStart()[pri:2, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@498d318c]">verifyAgentStatusTestAtStart</td> 
-  <td>main@29183965</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>20/02/14 16:08:45</td>   <td>12811</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AgentToolBarHomePageTest.teardown()[pri:0, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@498d318c]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@29183965</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>20/02/14 16:08:48</td>   <td>15840</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AgentToolBarHomePageTest.setup(java.lang.reflect.Method)[pri:0, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@498d318c]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@29183965</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>20/02/14 16:08:53</td>   <td>20210</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AgentToolBarHomePageTest.VerifyAgentStatusToPause()[pri:3, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@498d318c]">VerifyAgentStatusToPause</td> 
-  <td>main@29183965</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>20/02/14 16:08:57</td>   <td>24798</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AgentToolBarHomePageTest.teardown()[pri:0, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@498d318c]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@29183965</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>20/02/14 16:09:00</td>   <td>27815</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AgentToolBarHomePageTest.setup(java.lang.reflect.Method)[pri:0, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@498d318c]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@29183965</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>20/02/14 16:09:02</td>   <td>29716</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AgentToolBarHomePageTest.VerifyAgentStatusToReady()[pri:4, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@498d318c]">VerifyAgentStatusToReady</td> 
-  <td>main@29183965</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>20/02/14 16:09:02</td>   <td>29727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AgentToolBarHomePageTest.VerifyAgentModeAtStart()[pri:5, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@498d318c]">VerifyAgentModeAtStart</td> 
-  <td>main@29183965</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>20/02/14 16:09:02</td>   <td>29745</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AgentToolBarHomePageTest.VerifyAgentModeAfterManual()[pri:6, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@498d318c]">VerifyAgentModeAfterManual</td> 
-  <td>main@29183965</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>20/02/14 16:09:02</td>   <td>29748</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AgentToolBarHomePageTest.VerifyAgentModeAfterInbound()[pri:7, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@498d318c]">VerifyAgentModeAfterInbound</td> 
-  <td>main@29183965</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>20/02/14 16:09:02</td>   <td>29760</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AgentToolBarHomePageTest.VerifyAgentModeAfterPreview()[pri:8, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@498d318c]">VerifyAgentModeAfterPreview</td> 
-  <td>main@29183965</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>20/02/14 16:09:02</td>   <td>29771</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AgentToolBarHomePageTest.VerifyAgentModeAfterProgressive()[pri:9, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@498d318c]">VerifyAgentModeAfterProgressive</td> 
-  <td>main@29183965</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>20/02/14 16:09:02</td>   <td>29779</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AgentToolBarHomePageTest.VerifyAgentModeAfterBlended()[pri:10, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@498d318c]">VerifyAgentModeAfterBlended</td> 
-  <td>main@29183965</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>20/02/14 16:09:02</td>   <td>29789</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AgentToolBarHomePageTest.VerifyAgentATBForceRelease()[pri:11, instance:com.CA.qa.TestCases.AgentToolBarHomePageTest@498d318c]">VerifyAgentATBForceRelease</td> 
-  <td>main@29183965</td>   <td></td> </tr>
+<tr bgcolor="9eae87">  <td>20/02/28 18:36:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ValidateConfigurationsPage.setup()[pri:0, instance:com.CA.qa.TestCases.ValidateConfigurationsPage@6e171cd7]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@131635550</td>   <td></td> </tr>
+<tr bgcolor="9eae87">  <td>20/02/28 18:36:33</td>   <td>3841</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateConfigurationsPage.ValidateAgentIdErrorMsg()[pri:1, instance:com.CA.qa.TestCases.ValidateConfigurationsPage@6e171cd7]">ValidateAgentIdErrorMsg</td> 
+  <td>main@131635550</td>   <td></td> </tr>
+<tr bgcolor="9eae87">  <td>20/02/28 18:36:34</td>   <td>4941</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateConfigurationsPage.ValidateAgentIdRAngeErrorMsg()[pri:2, instance:com.CA.qa.TestCases.ValidateConfigurationsPage@6e171cd7]">ValidateAgentIdRAngeErrorMsg</td> 
+  <td>main@131635550</td>   <td></td> </tr>
+<tr bgcolor="9eae87">  <td>20/02/28 18:36:35</td>   <td>6038</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateConfigurationsPage.ValidateAgentIdSplRAngeErrorMsg()[pri:3, instance:com.CA.qa.TestCases.ValidateConfigurationsPage@6e171cd7]">ValidateAgentIdSplRAngeErrorMsg</td> 
+  <td>main@131635550</td>   <td></td> </tr>
+<tr bgcolor="9eae87">  <td>20/02/28 18:36:36</td>   <td>7069</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateConfigurationsPage.ValidateAgentPasswordEmptyErrorMsg()[pri:4, instance:com.CA.qa.TestCases.ValidateConfigurationsPage@6e171cd7]">ValidateAgentPasswordEmptyErrorMsg</td> 
+  <td>main@131635550</td>   <td></td> </tr>
+<tr bgcolor="9eae87">  <td>20/02/28 18:36:37</td>   <td>8017</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateConfigurationsPage.ValidateAgentPasswordRAngeErrorMsg()[pri:5, instance:com.CA.qa.TestCases.ValidateConfigurationsPage@6e171cd7]">ValidateAgentPasswordRAngeErrorMsg</td> 
+  <td>main@131635550</td>   <td></td> </tr>
+<tr bgcolor="9eae87">  <td>20/02/28 18:36:38</td>   <td>9063</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateConfigurationsPage.ValidateAgentNameEmptyErrorMsg()[pri:6, instance:com.CA.qa.TestCases.ValidateConfigurationsPage@6e171cd7]">ValidateAgentNameEmptyErrorMsg</td> 
+  <td>main@131635550</td>   <td></td> </tr>
+<tr bgcolor="9eae87">  <td>20/02/28 18:36:39</td>   <td>9997</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateConfigurationsPage.ValidateAgentNameRangeErrorMsg()[pri:7, instance:com.CA.qa.TestCases.ValidateConfigurationsPage@6e171cd7]">ValidateAgentNameRangeErrorMsg</td> 
+  <td>main@131635550</td>   <td></td> </tr>
+<tr bgcolor="9eae87">  <td>20/02/28 18:36:40</td>   <td>11006</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateConfigurationsPage.ValidateAgentNameSplRangeErrorMsg()[pri:8, instance:com.CA.qa.TestCases.ValidateConfigurationsPage@6e171cd7]">ValidateAgentNameSplRangeErrorMsg</td> 
+  <td>main@131635550</td>   <td></td> </tr>
+<tr bgcolor="9eae87">  <td>20/02/28 18:36:41</td>   <td>12056</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateConfigurationsPage.ValidateAgentPriorityEmptyErrorMsg()[pri:9, instance:com.CA.qa.TestCases.ValidateConfigurationsPage@6e171cd7]">ValidateAgentPriorityEmptyErrorMsg</td> 
+  <td>main@131635550</td>   <td></td> </tr>
+<tr bgcolor="9eae87">  <td>20/02/28 18:36:42</td>   <td>13029</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateConfigurationsPage.ValidateAgentPriorityRangeErrorMsg()[pri:10, instance:com.CA.qa.TestCases.ValidateConfigurationsPage@6e171cd7]">ValidateAgentPriorityRangeErrorMsg</td> 
+  <td>main@131635550</td>   <td></td> </tr>
+<tr bgcolor="9eae87">  <td>20/02/28 18:36:43</td>   <td>14097</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateConfigurationsPage.ValidateAgentEmailErrorMsg()[pri:11, instance:com.CA.qa.TestCases.ValidateConfigurationsPage@6e171cd7]">ValidateAgentEmailErrorMsg</td> 
+  <td>main@131635550</td>   <td></td> </tr>
+<tr bgcolor="9eae87">  <td>20/02/28 18:36:44</td>   <td>15286</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateConfigurationsPage.ValidateAgentDataErrorMsg()[pri:12, instance:com.CA.qa.TestCases.ValidateConfigurationsPage@6e171cd7]">ValidateAgentDataErrorMsg</td> 
+  <td>main@131635550</td>   <td></td> </tr>
+<tr bgcolor="9eae87">  <td>20/02/28 18:36:45</td>   <td>16410</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateConfigurationsPage.ValidateAgentDataSplRangeErrorMsg()[pri:13, instance:com.CA.qa.TestCases.ValidateConfigurationsPage@6e171cd7]">ValidateAgentDataSplRangeErrorMsg</td> 
+  <td>main@131635550</td>   <td></td> </tr>
+<tr bgcolor="9eae87">  <td>20/02/28 18:36:46</td>   <td>17432</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateConfigurationsPage.ValidateAgentModeNotEnabledErrorMsg()[pri:13, instance:com.CA.qa.TestCases.ValidateConfigurationsPage@6e171cd7]">ValidateAgentModeNotEnabledErrorMsg</td> 
+  <td>main@131635550</td>   <td></td> </tr>
+<tr bgcolor="9eae87">  <td>20/02/28 18:36:47</td>   <td>18572</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ValidateConfigurationsPage.nteardown()[pri:0, instance:com.CA.qa.TestCases.ValidateConfigurationsPage@6e171cd7]">&lt;&lt;nteardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@131635550</td>   <td></td> </tr>
 </table>
