--- a/CloudAgent/test-output/old/Default suite/methods-alphabetical.html
+++ b/CloudAgent/test-output/old/Default suite/methods-alphabetical.html
@@ -1,36 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9eae87">  <td>20/02/28 18:36:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateConfigurationsPage.ValidateAgentDataErrorMsg()[pri:12, instance:com.CA.qa.TestCases.ValidateConfigurationsPage@6e171cd7]">ValidateAgentDataErrorMsg</td> 
-  <td>main@131635550</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>20/02/28 18:36:45</td>   <td>1124</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateConfigurationsPage.ValidateAgentDataSplRangeErrorMsg()[pri:13, instance:com.CA.qa.TestCases.ValidateConfigurationsPage@6e171cd7]">ValidateAgentDataSplRangeErrorMsg</td> 
-  <td>main@131635550</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>20/02/28 18:36:43</td>   <td>-1189</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateConfigurationsPage.ValidateAgentEmailErrorMsg()[pri:11, instance:com.CA.qa.TestCases.ValidateConfigurationsPage@6e171cd7]">ValidateAgentEmailErrorMsg</td> 
-  <td>main@131635550</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>20/02/28 18:36:33</td>   <td>-11445</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateConfigurationsPage.ValidateAgentIdErrorMsg()[pri:1, instance:com.CA.qa.TestCases.ValidateConfigurationsPage@6e171cd7]">ValidateAgentIdErrorMsg</td> 
-  <td>main@131635550</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>20/02/28 18:36:34</td>   <td>-10345</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateConfigurationsPage.ValidateAgentIdRAngeErrorMsg()[pri:2, instance:com.CA.qa.TestCases.ValidateConfigurationsPage@6e171cd7]">ValidateAgentIdRAngeErrorMsg</td> 
-  <td>main@131635550</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>20/02/28 18:36:35</td>   <td>-9248</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateConfigurationsPage.ValidateAgentIdSplRAngeErrorMsg()[pri:3, instance:com.CA.qa.TestCases.ValidateConfigurationsPage@6e171cd7]">ValidateAgentIdSplRAngeErrorMsg</td> 
-  <td>main@131635550</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>20/02/28 18:36:46</td>   <td>2146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateConfigurationsPage.ValidateAgentModeNotEnabledErrorMsg()[pri:13, instance:com.CA.qa.TestCases.ValidateConfigurationsPage@6e171cd7]">ValidateAgentModeNotEnabledErrorMsg</td> 
-  <td>main@131635550</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>20/02/28 18:36:38</td>   <td>-6223</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateConfigurationsPage.ValidateAgentNameEmptyErrorMsg()[pri:6, instance:com.CA.qa.TestCases.ValidateConfigurationsPage@6e171cd7]">ValidateAgentNameEmptyErrorMsg</td> 
-  <td>main@131635550</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>20/02/28 18:36:39</td>   <td>-5289</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateConfigurationsPage.ValidateAgentNameRangeErrorMsg()[pri:7, instance:com.CA.qa.TestCases.ValidateConfigurationsPage@6e171cd7]">ValidateAgentNameRangeErrorMsg</td> 
-  <td>main@131635550</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>20/02/28 18:36:40</td>   <td>-4280</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateConfigurationsPage.ValidateAgentNameSplRangeErrorMsg()[pri:8, instance:com.CA.qa.TestCases.ValidateConfigurationsPage@6e171cd7]">ValidateAgentNameSplRangeErrorMsg</td> 
-  <td>main@131635550</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>20/02/28 18:36:36</td>   <td>-8217</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateConfigurationsPage.ValidateAgentPasswordEmptyErrorMsg()[pri:4, instance:com.CA.qa.TestCases.ValidateConfigurationsPage@6e171cd7]">ValidateAgentPasswordEmptyErrorMsg</td> 
-  <td>main@131635550</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>20/02/28 18:36:37</td>   <td>-7269</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateConfigurationsPage.ValidateAgentPasswordRAngeErrorMsg()[pri:5, instance:com.CA.qa.TestCases.ValidateConfigurationsPage@6e171cd7]">ValidateAgentPasswordRAngeErrorMsg</td> 
-  <td>main@131635550</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>20/02/28 18:36:41</td>   <td>-3230</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateConfigurationsPage.ValidateAgentPriorityEmptyErrorMsg()[pri:9, instance:com.CA.qa.TestCases.ValidateConfigurationsPage@6e171cd7]">ValidateAgentPriorityEmptyErrorMsg</td> 
-  <td>main@131635550</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>20/02/28 18:36:42</td>   <td>-2257</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateConfigurationsPage.ValidateAgentPriorityRangeErrorMsg()[pri:10, instance:com.CA.qa.TestCases.ValidateConfigurationsPage@6e171cd7]">ValidateAgentPriorityRangeErrorMsg</td> 
-  <td>main@131635550</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>20/02/28 18:36:47</td>   <td>3286</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ValidateConfigurationsPage.nteardown()[pri:0, instance:com.CA.qa.TestCases.ValidateConfigurationsPage@6e171cd7]">&lt;&lt;nteardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@131635550</td>   <td></td> </tr>
-<tr bgcolor="9eae87">  <td>20/02/28 18:36:29</td>   <td>-15286</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ValidateConfigurationsPage.setup()[pri:0, instance:com.CA.qa.TestCases.ValidateConfigurationsPage@6e171cd7]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@131635550</td>   <td></td> </tr>
+<tr bgcolor="9eae87">  <td>20/03/06 14:13:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="APITesting.API_TESTING_with_Automation(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.CA.qa.TestCases.APITesting@68999068]">API_TESTING_with_Automation</td> 
+  <td>main@489349054</td>   <td></td> </tr>
 </table>
