--- a/CloudAgent/test-output/emailable-report.html
+++ b/CloudAgent/test-output/emailable-report.html
@@ -9,23 +9,40 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">14</td><td class="num">0</td><td class="num">0</td><td class="num">19,957</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">16,747</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="14">com.CA.qa.TestCases.ValidateConfigurationsPage</td><td><a href="#m0">ValidateAgentDataErrorMsg</a></td><td rowspan="1">1582895204703</td><td rowspan="1">1123</td></tr><tr class="passedeven"><td><a href="#m1">ValidateAgentDataSplRangeErrorMsg</a></td><td rowspan="1">1582895205827</td><td rowspan="1">1021</td></tr><tr class="passedeven"><td><a href="#m2">ValidateAgentEmailErrorMsg</a></td><td rowspan="1">1582895203514</td><td rowspan="1">1187</td></tr><tr class="passedeven"><td><a href="#m3">ValidateAgentIdErrorMsg</a></td><td rowspan="1">1582895193258</td><td rowspan="1">1097</td></tr><tr class="passedeven"><td><a href="#m4">ValidateAgentIdRAngeErrorMsg</a></td><td rowspan="1">1582895194358</td><td rowspan="1">1095</td></tr><tr class="passedeven"><td><a href="#m5">ValidateAgentIdSplRAngeErrorMsg</a></td><td rowspan="1">1582895195455</td><td rowspan="1">1030</td></tr><tr class="passedeven"><td><a href="#m6">ValidateAgentModeNotEnabledErrorMsg</a></td><td rowspan="1">1582895206849</td><td rowspan="1">1138</td></tr><tr class="passedeven"><td><a href="#m7">ValidateAgentNameEmptyErrorMsg</a></td><td rowspan="1">1582895198480</td><td rowspan="1">933</td></tr><tr class="passedeven"><td><a href="#m8">ValidateAgentNameRangeErrorMsg</a></td><td rowspan="1">1582895199414</td><td rowspan="1">1007</td></tr><tr class="passedeven"><td><a href="#m9">ValidateAgentNameSplRangeErrorMsg</a></td><td rowspan="1">1582895200423</td><td rowspan="1">1049</td></tr><tr class="passedeven"><td><a href="#m10">ValidateAgentPasswordEmptyErrorMsg</a></td><td rowspan="1">1582895196486</td><td rowspan="1">946</td></tr><tr class="passedeven"><td><a href="#m11">ValidateAgentPasswordRAngeErrorMsg</a></td><td rowspan="1">1582895197434</td><td rowspan="1">1045</td></tr><tr class="passedeven"><td><a href="#m12">ValidateAgentPriorityEmptyErrorMsg</a></td><td rowspan="1">1582895201473</td><td rowspan="1">971</td></tr><tr class="passedeven"><td><a href="#m13">ValidateAgentPriorityRangeErrorMsg</a></td><td rowspan="1">1582895202446</td><td rowspan="1">1067</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.CA.qa.TestCases.APITesting</td><td><a href="#m0">API_TESTING_with_Automation</a></td><td rowspan="1">1583484231153</td><td rowspan="1">16147</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.CA.qa.TestCases.ValidateConfigurationsPage#ValidateAgentDataErrorMsg</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.CA.qa.TestCases.ValidateConfigurationsPage#ValidateAgentDataSplRangeErrorMsg</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.CA.qa.TestCases.ValidateConfigurationsPage#ValidateAgentEmailErrorMsg</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.CA.qa.TestCases.ValidateConfigurationsPage#ValidateAgentIdErrorMsg</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.CA.qa.TestCases.ValidateConfigurationsPage#ValidateAgentIdRAngeErrorMsg</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">com.CA.qa.TestCases.ValidateConfigurationsPage#ValidateAgentIdSplRAngeErrorMsg</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">com.CA.qa.TestCases.ValidateConfigurationsPage#ValidateAgentModeNotEnabledErrorMsg</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">com.CA.qa.TestCases.ValidateConfigurationsPage#ValidateAgentNameEmptyErrorMsg</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">com.CA.qa.TestCases.ValidateConfigurationsPage#ValidateAgentNameRangeErrorMsg</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m9">com.CA.qa.TestCases.ValidateConfigurationsPage#ValidateAgentNameSplRangeErrorMsg</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m10">com.CA.qa.TestCases.ValidateConfigurationsPage#ValidateAgentPasswordEmptyErrorMsg</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m11">com.CA.qa.TestCases.ValidateConfigurationsPage#ValidateAgentPasswordRAngeErrorMsg</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m12">com.CA.qa.TestCases.ValidateConfigurationsPage#ValidateAgentPriorityEmptyErrorMsg</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m13">com.CA.qa.TestCases.ValidateConfigurationsPage#ValidateAgentPriorityRangeErrorMsg</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.CA.qa.TestCases.APITesting#API_TESTING_with_Automation</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th><th>Parameter #6</th><th>Parameter #7</th><th>Parameter #8</th><th>Parameter #9</th><th>Parameter #10</th><th>Parameter #11</th><th>Parameter #12</th><th>Parameter #13</th><th>Parameter #14</th></tr><tr class="param stripe"><td>http://172.16.15.210/</td><td>CAServices/AgentManualDial.php?api_key=&amp;username=&amp;agentID=&amp;campaignName=&amp;customerNumber=&amp;UCID=&amp;uui=&amp;format=</td><td>KKfdb819a5c849d829cd000819d4a4463b</td><td>ca_testing</td><td>santosh1</td><td>san_tz_inbound</td><td>9553578721</td><td>true</td><td>Test1</td><td>Json</td><td>yes</td><td>No</td><td>{&quot;ucid&quot;:&quot;9189158339772211&quot;,&quot;status&quot;:&quot;queued successfully&quot;}</td><td>{&quot;status&quot;:&quot;Agent is not available&quot;}</td></tr><tr><th colspan="14">Exception</th></tr><tr><td colspan="14"><div class="stacktrace">java.lang.AssertionError: Api not worked expected [true] but found [false]
+	at org.testng.Assert.fail(Assert.java:96)
+	at org.testng.Assert.failNotEquals(Assert.java:776)
+	at org.testng.Assert.assertTrue(Assert.java:44)
+	at com.CA.qa.TestCases.APITesting.API_TESTING_with_Automation(APITesting.java:29)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
+	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+	at java.base/java.lang.reflect.Method.invoke(Method.java:566)
+	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:124)
+	at org.testng.internal.Invoker.invokeMethod(Invoker.java:583)
+	at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:719)
+	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:989)
+	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:125)
+	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:109)
+	at org.testng.TestRunner.privateRun(TestRunner.java:648)
+	at org.testng.TestRunner.run(TestRunner.java:505)
+	at org.testng.SuiteRunner.runTest(SuiteRunner.java:455)
+	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:450)
+	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:415)
+	at org.testng.SuiteRunner.run(SuiteRunner.java:364)
+	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
+	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:84)
+	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1208)
+	at org.testng.TestNG.runSuitesLocally(TestNG.java:1137)
+	at org.testng.TestNG.runSuites(TestNG.java:1049)
+	at org.testng.TestNG.run(TestNG.java:1017)
+	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
+	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
+	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
+</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
