--- a/CloudAgent/test-output/old/Default suite/classes.html
+++ b/CloudAgent/test-output/old/Default suite/classes.html
@@ -4,74 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.CA.qa.TestCases.ValidateConfigurationsPage</td>
+<td>com.CA.qa.TestCases.APITesting</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ValidateAgentPasswordEmptyErrorMsg</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>ValidateAgentIdSplRAngeErrorMsg</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>ValidateAgentNameRangeErrorMsg</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>ValidateAgentPriorityEmptyErrorMsg</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>ValidateAgentDataErrorMsg</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>ValidateAgentNameSplRangeErrorMsg</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>ValidateAgentIdErrorMsg</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>ValidateAgentPasswordRAngeErrorMsg</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>ValidateAgentDataSplRangeErrorMsg</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>ValidateAgentPriorityRangeErrorMsg</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>ValidateAgentNameEmptyErrorMsg</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>ValidateAgentIdRAngeErrorMsg</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>ValidateAgentEmailErrorMsg</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>ValidateAgentModeNotEnabledErrorMsg</td>
+<td>API_TESTING_with_Automation</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>setup</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
@@ -81,8 +25,4 @@
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>nteardown</td>
-<td>&nbsp;</td></tr>
 </table>
